input styles. work on this. event listener for audio is searchResults div. not bodyWrap. this files down the target area, audio is no longer triggered by a click anywhere on the page.

--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,43 @@ h3 {
    font-weight: lighter;
 }
 
-#audioWrap {
+#searchForm {
    width: 100vw;
    height: 10vw;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   /*border: solid black 1px;*/
+}
+
+#searchInput {
+   width: 40vw;
+   height: 60%;
+   text-align: center;
+   background: #F9F9F9;
+   border-radius: 3px;
+   border: 1px solid transparent;
+   border-top: none;
+   border-bottom: 1px solid #DDD;
+   box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
+}
+
+
+
+#submitButton {
+   width: 40vw;
+   height: 40%;
+   border-radius: 3px;
+   border: 1px solid transparent;
+   border-top: none;
+   border-bottom: 1px solid #DDD;
+   box-shadow: outset 0 3px 4px rgba(0,0,0,.39), 0 -1px 1px #C3C0C6, 0 1px 0 #C3C0C6;
+}
+
+#audioWrap {
+   width: 100vw;
+   /*height: 10vw;*/
    display: flex;
    justify-content: center;
    align-items: center;
@@ -62,11 +96,6 @@ h3 {
 
 audio {
    width: 75%;
-}
-
-#searchInput {
-   width: 40vw;
-   background: #F9F9F9;
 }
 
 #searchResults {
